[lworld] C2 compilation fails with assert "meet not symmetric"

XMLWordPrintable

      Merging JDK-8240676 causes Valhalla tests to trigger the "meet not symmetric" assert in type.cpp:

      === Meet Not Symmetric ===
      t = stable:valuetype[8]:{compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2, java/lang/Integer, [I, int, long, short, int}[int:1]
      this= stable:narrowoop: java/lang/Integer:TopPTR:exact *,iid=top (inline_depth=InlineDepthTop)[int:1]
      mt=(t meet this)= stable:narrowoop: java/lang/Integer:NotNull:exact *[int:1]
      t_dual= valuetype[8]:{compiler/valhalla/valuetypes/MyValue2, compiler/valhalla/valuetypes/MyValue2, java/lang/Integer, [I, int, long, short, int}[int:1]
      this_dual= narrowoop: java/lang/Integer:exact *[int:1]
      mt_dual= narrowoop: java/lang/Integer:AnyNull:exact *,iid=top (inline_depth=InlineDepthTop)[int:1]
      mt_dual meet t_dual= narrowoop: java/lang/Integer:NotNull:exact *[int:1]
      mt_dual meet this_dual= narrowoop: java/lang/Integer:exact *[int:1]

            Assignee:
            Roland Westrelin
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: