8242269: [lworld] C2 compilation fails with assert "meet not symmetric"

Reviewed-by: dsimms, thartmann